# odooly

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  odooly.ini  odooly.py  odooly_run.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: .readthedocs.yaml  Makefile  api.rst  conf.py  developer.rst  index.rst  intro.rst  make.bat  tutorial.rst
scripts/: connect_demo.py  odooly+sql.py
tests/: _common.py  test_client.py  test_interact.py  test_model.py  test_util.py
