[metadata]
name = Odooly
version = attr: odooly.__version__
license = BSD
description = Versatile tool for browsing Odoo / OpenERP data
long_description = file: README.rst
url = http://odooly.readthedocs.org/
author = Florent Xicluna
author_email = florent.xicluna@gmail.com
platforms = any
keywords = odoo openerp xml-rpc xmlrpc jsonrpc
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Odoo
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
py_modules = odooly
tests_require =
    mock
    unittest2
test_suite = unittest2.collector


[options.entry_points]
console_scripts =
    odooly = odooly:main


[bdist_wheel]
universal = 1
