[metadata]
name = Odooly
version = attr: odooly.__version__
license = BSD-3-Clause
description = Versatile tool for browsing Odoo / OpenERP data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://odooly.readthedocs.org/
author = Florent Xicluna
author_email = florent.xicluna@gmail.com
platforms = any
keywords = odoo openerp xml-rpc xmlrpc jsonrpc json2
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Odoo
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
py_modules = odooly
test_suite = tests


[options.entry_points]
console_scripts =
    odooly = odooly:main
